<resources>
    <string name="app_name">PsychoApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello %s</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="login">Login</string>
    <string name="home">Главная</string>
    <string name="articles">Статьи</string>
    <string name="settings">Настройки</string>
    <string name="description">это сложная тема, связанная с неполадками в психической сфере, которые могут проявляться различными способами. В некоторых случаях, оно может серьезно повлиять на жизнь человека и окружающих его людей.</string>
    <string name="description_diagnostics">это процесс, позволяющий выявить определенные черты личности, которые могут привести к нарушению социальной и межличностной адаптации. В результате диагностики устанавливаются конкретные характеристики личности, которые помогают определить возможное наличие расстройства личности.</string>
    <string name="icon_back">icon back</string>
    <string name="rl">Расстройство личности</string>
    <string name="what_rl">Что такое расстройство личности?</string>
    <string name="diagnostic">Диагностика</string>
    <string name="diagnostic_rl">Диагностика расстройства личности</string>
    <string name="FiveSoveit">Топ советов</string>
    <string name="Top_five_recommendate">Топ советов по психотерапии</string>
    <string name="description_Top_five_soveit">Здесь будет рассказано топ три совета от лучших специалистов  которые расскажут как вам помочь с этой тяжелой ситуацией.</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new">Create new</string>
    <string name="are_you_new">Are you new?</string>
    <string name="send">Send</string>
    <string name="email_address">Email address</string>
    <string name="confirm_new_password">Подтвердите пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="edit_data">Редактирование</string>
    <string name="new_name">Новое имя</string>
    <string name="change">Изменить</string>

</resources>